--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <img src="moan1.jpg" alt="الأيقونة للعطور - جودة وأصالة" class="w-full h-56 object-cover">    
     <title>الأيقونة للعطور - جودة وأصالة</title>
+<link rel="manifest" href="https://mercury-technology.company.site/manifest.json">
+
+<meta http-equiv="x-dns-prefetch-control" content="on">
+
+	<link rel="dns-prefetch" href="https://mercury-technology.company.site/d34ikvsdm2rlij.cloudfront.net/startersite">
+<link rel="dns-prefetch" href="https://don16obqbay2c.cloudfront.net/">
+<link rel="dns-prefetch" href="https://maps.googleapis.com/">
+
+
+		<link rel="preload" href="https://startersite.ecwid.com/fonts-api?family=Root+UI:400,700|Root+UI:400,700|Root+UI:400,700&amp;display=swap" crossorigin="anonymous">
+	<link rel="preload" href="https://d1oxsl77a1kjht.cloudfront.net/css/new?hc=1893402460&amp;ownerid=53750106&amp;frontendV2=true" as="style">
+
+<link href="https://app.ecwid.com/script.js?53750106&amp;data_platform=startersite_v2" rel="preload" as="script">
+				<link rel="preload" href="https://d34ikvsdm2rlij.cloudfront.net/startersite/static/2025/2025-20311-g9aa90c799b92f8/js/store.bundle.js" as="script">
+	<link rel="shortcut icon" href="moan1.jpg" type="image/jpg">
+	<link rel="icon" href="moan1.jpg" type="image/jpg">
+	<link rel="apple-touch-icon" href="moan1.jpg">
+
+
+	
+		<link rel="stylesheet" type="text/css" href="https://d1oxsl77a1kjht.cloudfront.net/css/new?hc=1893402460&amp;ownerid=53750106&amp;frontendV2=true">
+		
+		
+
+		
+		
+
+		<link rel="canonical" href="https://talalye1.github.io/Icon-perfumes/">
+
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +58,6 @@
 
         <!-- Header -->
         <header class="text-center mb-12">
-            <img src="slogan.jpg" alt="شعار أيقونة للعطور" class="mx-auto mb-6 w-32 h-32 md:w-50 md:h-50 object-contain">
             <h1 class="text-4xl md:text-6xl font-bold text-gold mb-2">الأيقونة للعطور</h1>
             <p class="text-lg md:text-xl text-gray-30">تجربة عطرية فريدة... تليق بك</p>
         </header>
