--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <img src="moan1.jpg" alt="الأيقونة للعطور - جودة وأصالة" class="w-full h-56 object-cover">    
     <title>الأيقونة للعطور - جودة وأصالة</title>
+    <link rel="icon" href="moan1.jpg" type="image/jpg">
+	<link rel="apple-touch-icon" href="moan1.jpg">
 <link rel="manifest" href="https://mercury-technology.company.site/manifest.json">
 
 <meta http-equiv="x-dns-prefetch-control" content="on">
