--- a/index.htm
+++ b/index.htm
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="moan1.jpg" alt="الأيقونة للعطور - جودة وأصالة" class="w-full h-56 object-cover">    
-    <title>الأيقونة للعطور - جودة وأصالة</title>
-	<link rel="shortcut icon" href="moan2.jpg" type="image/jpg">
-	<link rel="icon" href="moan2.jpg" type="image/jpg">
+	<link rel="shortcut icon" href="moan2.jpg">
+	<link rel="icon" href="moan2.jpg">
 	<link rel="apple-touch-icon" href="moan2.jpg">
+    <title>الأيقونة للعطور - جودة وأصالة</title>
 <link rel="manifest" href="https://mercury-technology.company.site/manifest.json">
 
 <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -61,6 +60,7 @@
 
         <!-- Header -->
         <header class="text-center mb-12">
+	    <img src="moan1.jpg" alt="الأيقونة للعطور - جودة وأصالة" class="w-full h-56 object-cover">    
             <h1 class="text-4xl md:text-6xl font-bold text-gold mb-2">الأيقونة للعطور</h1>
             <p class="text-lg md:text-xl text-gray-30">تجربة عطرية فريدة... تليق بك</p>
         </header>
