--- a/index.htm
+++ b/index.htm
@@ -3,40 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="moan2.jpg">
-	<link rel="icon" href="moan2.jpg">
-	<link rel="apple-touch-icon" href="moan2.jpg">
     <title>الأيقونة للعطور - جودة وأصالة</title>
-<link rel="manifest" href="https://mercury-technology.company.site/manifest.json">
-
-<meta http-equiv="x-dns-prefetch-control" content="on">
-
-	<link rel="dns-prefetch" href="https://mercury-technology.company.site/d34ikvsdm2rlij.cloudfront.net/startersite">
-<link rel="dns-prefetch" href="https://don16obqbay2c.cloudfront.net/">
-<link rel="dns-prefetch" href="https://maps.googleapis.com/">
-
-
-		<link rel="preload" href="https://startersite.ecwid.com/fonts-api?family=Root+UI:400,700|Root+UI:400,700|Root+UI:400,700&amp;display=swap" crossorigin="anonymous">
-	<link rel="preload" href="https://d1oxsl77a1kjht.cloudfront.net/css/new?hc=1893402460&amp;ownerid=53750106&amp;frontendV2=true" as="style">
-
-<link href="https://app.ecwid.com/script.js?53750106&amp;data_platform=startersite_v2" rel="preload" as="script">
-				<link rel="preload" href="https://d34ikvsdm2rlij.cloudfront.net/startersite/static/2025/2025-20311-g9aa90c799b92f8/js/store.bundle.js" as="script">
-	<link rel="shortcut icon" href="moan2.jpg" type="image/jpg">
-	<link rel="icon" href="moan2.jpg" type="image/jpg">
-	<link rel="apple-touch-icon" href="moan2.jpg">
-
-
-	
-		<link rel="stylesheet" type="text/css" href="https://d1oxsl77a1kjht.cloudfront.net/css/new?hc=1893402460&amp;ownerid=53750106&amp;frontendV2=true">
-		
-		
-
-		
-		
-
-		<link rel="canonical" href="https://talalye1.github.io/Icon-perfumes/">
-
-    
+<meta property="og:image" content="moan2.jpg">
+<meta property="og.image.width" content="1200">
+<meta property="og.image.height" content="630">
+<meta property="og.type" content="website">
+<meta property="og.url" content="https://talalye1.github.io/Icon-perfumes">
+<meta property="og.title" content="الأيقونة للعطور - جودة وأصالةا">
+<meta property="og.description" content="عطور رجاليه ونسائيه واجود انواع البخور">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +31,7 @@
 
     <!-- Container -->
     <div class="container mx-auto p-4 md:p-8">
-	    <img src="moan2.jpg" alt="الأيقونة للعطور - جودة وأصالة" class="w-full h-56 object-cover">    
+	    <img src="moan3.jpg" alt="الأيقونة للعطور - جودة وأصالة" class="w-full h-56 object-cover">    
         <!-- Header -->
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-6xl font-bold text-gold mb-2">الأيقونة للعطور</h1>
@@ -160,4 +134,4 @@
     </div>
 
 </body>
-</html>
+	</html>
