--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title>الأيقونة للعطور - جودة وأصالة</title>
+    <title>عطور رجاليه ونسائيه واجود انواع البخور</title>
 <meta property="og:image" content="moan4.jpg">
 <meta property="og.image.width" content="1200">
 <meta property="og.image.height" content="630">
