--- a/index.htm
+++ b/index.htm
@@ -121,7 +121,7 @@
                    <span> فيسبوك </span>
                 </a>                
             </div>
-
+<img src="https://github.githubassets.com/images/icons/emoji/unicode/1f4ac.png?v8" alt="Messaging Icon" width="32" height="32">
             <!-- WhatsApp Button for Designer -->
             <h4 class="text-1xl font-bold mb-4">تصميم وبرمجة<span class="text-gold"> طلال سليمان المقطري  </span></h4>            
             <a href="https://api.whatsapp.com/send?text=%D9%85%D8%B5%D9%85%D9%85%20%D8%A7%D9%84%D8%AA%D8%B7%D8%A8%D9%8A%D9%82%D8%A7%D8%AA%20%D9%88%D8%A7%D9%84%D9%85%D9%88%D8%A7%D9%82%D8%B9%20%0a%0a%20%20%20%D8%B7%D9%84%D8%A7%D9%84%20%D8%B3%D9%84%D9%8A%D9%85%D8%A7%D9%86%20%D8%A7%D9%84%D9%85%D9%82%D8%B7%D8%B1%D9%8A%20%0a%0a%20https://www.facebook.com/talalye2024%20%0a%0a%D8%A7%D9%87%D9%84%D8%A7%D9%8B%20%D8%A8%D9%83%20%0a%20%D8%A7%D9%86%D8%AA%20%D9%82%D8%A7%D8%AF%D9%85%20%D9%85%D9%86%20%D9%85%D9%88%D9%82%D8%B9%20%D8%A7%D9%84%D8%A3%D9%8A%D9%82%D9%88%D9%86%D8%A9%20%D9%84%D9%84%D8%B9%D8%B7%D9%88%D8%B1%20%0a%20%D9%87%D9%84%20%D9%84%D8%AF%D9%8A%D9%83%20%D8%A7%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%A7%D9%88%20%D8%B7%D9%84%D8%A8%20%D8%AA%D8%B5%D9%85%D9%8A%D9%85%0a%0a%20%D8%A7%D9%83%D8%AA%D8%A8%20%D9%85%D8%A7%20%D9%87%D9%88%20%D9%86%D9%88%D8%B9%20%D8%A7%D9%84%D8%A7%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%A7%D9%88%20%D8%A7%D9%84%D8%B7%D9%84%D8%A8%20%D9%87%D9%86%D8%A7%F0%9F%91%88:&phone=+967774662666" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-300 flex items-center text-sm md:text-base mt-2">
