--- a/index.htm
+++ b/index.htm
@@ -236,7 +236,7 @@
             background: white;
             padding: 15px;
             border-radius: 15px;
-            border: 1px solid #dee2e6;
+            border: 1px solid #495057;
             cursor: pointer;
             transition: all 0.3s;
             box-shadow: 0 2px 5px rgba(0,0,0,0.05);
@@ -245,13 +245,13 @@
         }
         
         .chat-question:hover {
-            background: #1a2a6c;
+            background: #495057;
             color: white;
             transform: translateX(-5px);
         }
         
         .chat-answer {
-            background: #e3f2fd;
+            background: #495057;
             padding: 15px;
             border-radius: 15px;
             border-bottom-left-radius: 0;
