--- a/index.htm
+++ b/index.htm
@@ -141,7 +141,7 @@
             right: 30px;
             width: 70px;
             height: 70px;
-            background: linear-gradient(135deg, #1a2a6c, #b21f1f);
+            background: linear-gradient(135deg, #1a2a6c, #495057);
             border-radius: 50%;
             display: flex;
             justify-content: center;
