--- a/index.htm
+++ b/index.htm
@@ -141,7 +141,7 @@
             right: 30px;
             width: 70px;
             height: 70px;
-            background: linear-gradient(135deg, #1a2a6c, #495057);
+            background: linear-gradient(135deg, #1a2a6c, #b21f1f);
             border-radius: 50%;
             display: flex;
             justify-content: center;
@@ -216,7 +216,7 @@
             flex: 1;
             padding: 20px;
             overflow-y: auto;
-            background: #f8f9fa;
+            background: #495057;
             display: flex;
             flex-direction: column;
             gap: 15px;
