--- a/index.htm
+++ b/index.htm
@@ -223,13 +223,13 @@
         }
         
         .welcome-message {
-            background: #e9ecef;
+            background: #495057;
             padding: 15px;
             border-radius: 15px;
             border-bottom-right-radius: 0;
             text-align: center;
             font-size: 0.95rem;
-            color: #495057;
+            color: #e9ecef;
         }
         
         .chat-question {
