--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
             right: 30px;
             width: 350px;
             height: 500px;
-            background-color: white;
+            background-color: black;
             border-radius: 20px;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
             z-index: 1001;
@@ -76,7 +76,7 @@
         
         .chat-header {
             background: linear-gradient(135deg, #1a2a6c, #b21f1f);
-            color: white;
+            color: black;
             padding: 20px;
             text-align: center;
             position: relative;
