--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
         }
         
         .chat-question {
-            background: white;
+            background: #e9ecef;
             padding: 15px;
             border-radius: 15px;
             border: 1px solid #dee2e6;
