--- a/index.htm
+++ b/index.htm
@@ -122,10 +122,10 @@
         }
         
         .chat-question {
-            background: white;
+            background: black;
             padding: 15px;
             border-radius: 15px;
-            border: 1px solid #495057;
+            border: 1px solid #dee2e6;
             cursor: pointer;
             transition: all 0.3s;
             box-shadow: 0 2px 5px rgba(0,0,0,0.05);
