--- a/index.htm
+++ b/index.htm
@@ -140,7 +140,7 @@
         }
         
         .chat-answer {
-            background: black;
+            background: red;
             padding: 15px;
             border-radius: 15px;
             border-bottom-left-radius: 0;
