--- a/index.htm
+++ b/index.htm
@@ -218,7 +218,9 @@
             },
             {
                 question: "كيف يمكنني التواصل مع خدمة العملاء؟",
-                answer: "من خلال نموذج الاتصال على موقعنا <a href="https://m.me/alayqwnt.ll.twr" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-2 rounded-lg transition-colors duration-300 flex items-center text-sm md:text-base">
+                answer: "من خلال نموذج الاتصال على موقعنا "
+            }
+		<a href="https://m.me/alayqwnt.ll.twr" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-2 rounded-lg transition-colors duration-300 flex items-center text-sm md:text-base">
                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-0 md:h-1 md:w-0 md:ml-0" fill="currentColor" viewBox="0 0 16 16"><path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/></svg>
                    <span>ماسنجر</span>
                 </a>
@@ -229,8 +231,7 @@
                 <a href="https://facebook.com/@alayqwnt.ll.twr" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-2 rounded-lg transition-colors duration-300 flex items-center text-sm md:text-base">
                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-0 md:h-1 md:w-0 md:ml-0" fill="currentColor" viewBox="0 0 16 16"><path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/></svg>
                    <span> فيسبوك </span>
-                </a>"
-            }
+                </a>
         ];        // عناصر DOM
         const chatIcon = document.getElementById('chatIcon');
         const chatContainer = document.getElementById('chatContainer');
