--- a/index.htm
+++ b/index.htm
@@ -1429,7 +1429,7 @@ https://m.me/alayqwnt.ll.twr`;
             const message = `العميل: الاخوه مبيعات الأيقونة للعطور
 السلام عليكم ورحمة الله وبركاته
 
-أريد معلومات عن هذا المنتج: ${product}، هل من الممكن تزويدي بالأسعار لديكم؟ لقد رأيت منتجاتكم على موقعكم :
+أريد معلومات عن هذا المنتج: ${product}، هل من الممكن تزويدي بالأسعار لديكم؟ لقد رأيت هذا المتج على موقعكم عل الويب:
 
 الأيقونة للعطور:
 https://talalye1.github.io/Icon-perfumes/
@@ -1479,8 +1479,4 @@ https://talalye1.github.io/Icon-perfumes/
         };
     </script>
 </body>
-</html>
-
-</body>
-
 </html>
