--- a/index.htm
+++ b/index.htm
@@ -963,7 +963,7 @@
         <div class="products-grid">
             <!-- المنتج 1: عطور رجالية -->
             <div class="product-card" data-category="men">
-                <img src="Icon-perfumes/men.png" alt="عطور رجالية" class="product-main-image">
+                <img src="men.png" alt="عطور رجالية" class="product-main-image">
                 
                 <!-- شريط الصور المصغرة للعطور الرجالية -->
                 <div class="thumbnail-slider">
@@ -1171,10 +1171,10 @@
             <a href="https://www.instagram.com/lyqwn_lltwr" class="contact-button instagram-btn" target="_blank">
                 <i class="fab fa-instagram"></i> انستجرام
             </a>
-            <a href="https://facebook.com/@alayqwnt.ll.twr" class="contact-button messenger-btn" onclick="openMessenger('استفسار عام')">
+            <a href="com.facebook.orca" class="contact-button messenger-btn" onclick="openMessenger('استفسار عام')">
                 <i class="fab fa-facebook-messenger"></i> ماسنجر
             </a>
-            <a href="https://api.whatsapp.com/send?phone=+967774662666" class="contact-button whatsapp-btn" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=#" class="contact-button whatsapp-btn" target="_blank">
                 <i class="fab fa-whatsapp"></i> مجموعة الواتساب
             </a>
         </div>
