--- a/index.htm
+++ b/index.htm
@@ -1528,15 +1528,24 @@ https://m.me/alayqwnt.ll.twr`;
             "بخور": "لدينا تشكيلة واسعة من البخور والعود بجودة عالية وأسعار تنافسية.",
             "رجالي": "لدينا تشكيلة واسعة من العطور الرجالية بجودة عالية وأسعار تنافسية.",
             "نسائي": "لدينا تشكيلة واسعة من العطور النسائية بجودة عالية وأسعار تنافسية.",
-            "كيف الحال": "تمام بخير وفي احسن حال: شكراً لسؤالك. كيف حالك انت؟.",
+            "الحال": "تمام بخير وفي احسن حال: شكراً لسؤالك. كيف حالك انت؟.",
+            "الاحوال": "تمام بخير وفي احسن حال: شكراً لسؤالك. كيف حالك انت؟.",
             "الحمدلله": "الحمدلله يستحق الحمد والشكر.",
-            "اين موقع الأيقونة للعطور": "الأيقونة للعطور مقرها في محافظة ذمار.",
-            "اين مقر الأيقونة للعطور": "الأيقونة للعطور مقرها في محافظة ذمار.",
-            "اين مكان الأيقونة للعطور": "الأيقونة للعطور مقرها في محافظة ذمار.",
-           "من صمم الموقع": "المصمم طلال سليمان قايد المقطري.",
-            "مصمم الموقع": "المصمم طلال سليمان قايد المقطري.",
+            "لله": "الحمدلله يستحق الحمد والشكر.",
+            "الله": "الحمدلله يستحق الحمد والشكر.",
+            "الحمد": "الحمدلله يستحق الحمد والشكر.",
+            "عنوان": "الأيقونة للعطور مقرها في محافظة ذمار.",
+            "معي": "معك مسؤول خدمة العملاء لدى الأيقونة للعطور مقرها في محافظة ذمار.",
+            "انت": "معك مسؤول خدمة العملاء لدى الأيقونة للعطور مقرها في محافظة ذمار.",
+            "اتواصل": "معك مسؤول خدمة العملاء لدى الأيقونة للعطور يمكنك التوصل معنا عبر https://m.me/alayqwnt.ll.twr الماسنجر.",
+            "اتصل": "معك مسؤول خدمة العملاء لدى الأيقونة للعطور يمكنك الاتصال عبر https://m.me/alayqwnt.ll.twr الماسنجر.",
+            "التواصل": "معك مسؤول خدمة العملاء لدى الأيقونة للعطور يمكنك التواصل معنا عبر https://m.me/alayqwnt.ll.twr الماسنجر.",
+            "مقر": "الأيقونة للعطور مقرها في محافظة ذمار.",
+            "مكان": "الأيقونة للعطور مقرها في محافظة ذمار.",
+           "صمم ": "المصمم طلال سليمان قايد المقطري.",
+            "مصمم": "المصمم طلال سليمان قايد المقطري.",
             "المصمم": "المصمم طلال سليمان قايد المقطري.",
-            "المبرمج": "المبرمج طلال سليمان قايد المقطري.",
+            "مبرمج": "المبرمج طلال سليمان قايد المقطري.",
             "عود": "نقدم أجود أنواع العود الطبيعي والمخلط بأسعار مناسبة للجميع."
         };
         
