--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>الأيقونة للعطور - جودة وأصالة</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="styles.css">
     <style>
         * {
             margin: 0;
