--- a/index.html
+++ b/index.html
@@ -106,15 +106,16 @@
                     <div class="product-image">
                         <img src="men.png" alt="عطور رجالية" id="mainImage1" onclick="openImageModal('mainImage1')">
                         <div class="thumbnails">
-                            <img src="men1.png" alt="صورة مصغرة 1" class="active" onclick="showImage(this, 'mainImage1')">
-                            <img src="men2.png" alt="صورة مصغرة 2" onclick="showImage(this, 'mainImage1')">
-                            <img src="men3.png" alt="صورة مصغرة 3" onclick="showImage(this, 'mainImage1')">
-                            <img src="men4.png" alt="صورة مصغرة 4" onclick="showImage(this, 'mainImage1')">
+                            <img src="men.png" alt="صورة مصغرة 1" class="active" onclick="showImage(this, 'mainImage1')">
+                            <img src="men1.png" alt="صورة مصغرة 2" onclick="showImage(this, 'mainImage1')">
+                            <img src="men2.png" alt="صورة مصغرة 3" onclick="showImage(this, 'mainImage1')">
+                            <img src="men3.png" alt="صورة مصغرة 4" onclick="showImage(this, 'mainImage1')">
+                            <img src="men4.png" alt="صورة مصغرة 5" onclick="showImage(this, 'mainImage1')">
+                            <img src="men5.png" alt="صورة مصغرة 6" onclick="showImage(this, 'mainImage1')">
                         </div>
                     </div>
                     <div class="product-details">
                         <p id="product-desc-1">اكتشف مجموعة من العطور التي تعكس القوة والأناقة. ثبات يدوم طويلاً ورائحة تأسر الحواس.</p>
-                        <button class="gemini-btn" onclick="generateProductDescription('عطور رجالية فاخرة', 'product-desc-1')">✨ اقترح وصفًا للمنتج</button>
                         <div class="product-rating">
                             <div class="rating">
                                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
@@ -141,15 +142,16 @@
                      <div class="product-image">
                         <img src="female.png" alt="عطور نسائية" id="mainImage2" onclick="openImageModal('mainImage2')">
                         <div class="thumbnails">
-                            <img src="female1.png" alt="صورة مصغرة 1" class="active" onclick="showImage(this, 'mainImage2')">
-                            <img src="female2.png" alt="صورة مصغرة 2" onclick="showImage(this, 'mainImage2')">
-                            <img src="female3.png" alt="صورة مصغرة 3" onclick="showImage(this, 'mainImage2')">
-                            <img src="female4.png" alt="صورة مصغرة 4" onclick="showImage(this, 'mainImage2')">
+                            <img src="female.png" alt="صورة مصغرة 1" class="active" onclick="showImage(this, 'mainImage2')">
+                            <img src="female1.png" alt="صورة مصغرة 2" onclick="showImage(this, 'mainImage2')">
+                            <img src="female2.png" alt="صورة مصغرة 3" onclick="showImage(this, 'mainImage2')">
+                            <img src="female3.png" alt="صورة مصغرة 4" onclick="showImage(this, 'mainImage2')">
+                            <img src="female4.png" alt="صورة مصغرة 5" onclick="showImage(this, 'mainImage2')">
+                            <img src="female5.png" alt="صورة مصغرة 6" onclick="showImage(this, 'mainImage2')">
                         </div>
                     </div>
                     <div class="product-details">
                         <p id="product-desc-2">كوني أيقونة الأنوثة مع تشكيلتنا الراقية. عطور ناعمة وجذابة لكل مناسباتك.</p>
-                        <button class="gemini-btn" onclick="generateProductDescription('عطور نسائية ساحرة', 'product-desc-2')">✨ اقترح وصفًا للمنتج</button>
                         <div class="product-rating">
                             <div class="rating">
                                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -176,15 +178,16 @@
                      <div class="product-image">
                         <img src="moan.png" alt="بخور وعود" id="mainImage3" onclick="openImageModal('mainImage3')">
                         <div class="thumbnails">
-                            <img src="moan1.png" alt="صورة مصغرة 1" class="active" onclick="showImage(this, 'mainImage3')">
-                            <img src="moan2.png" alt="صورة مصغرة 2" onclick="showImage(this, 'mainImage3')">
-                            <img src="moan3.png" alt="صورة مصغرة 3" onclick="showImage(this, 'mainImage3')">
-                            <img src="moan4.png" alt="صورة مصغرة 4" onclick="showImage(this, 'mainImage3')">
+                            <img src="moan.png" alt="صورة مصغرة 1" class="active" onclick="showImage(this, 'mainImage3')">
+                            <img src="moan1.png" alt="صورة مصغرة 2" onclick="showImage(this, 'mainImage3')">
+                            <img src="moan2.png" alt="صورة مصغرة 3" onclick="showImage(this, 'mainImage3')">
+                            <img src="moan3.png" alt="صورة مصغرة 4" onclick="showImage(this, 'mainImage3')">
+                            <img src="moan4.png" alt="صورة مصغرة 5" onclick="showImage(this, 'mainImage3')">
+                            <img src="moan5.png" alt="صورة مصغرة 6" onclick="showImage(this, 'mainImage3')">
                         </div>
                     </div>
                     <div class="product-details">
                         <p id="product-desc-3">أضف لمسة من الفخامة والروحانية إلى منزلك. أجود أنواع البخور والعود لرائحة تملأ المكان بالهدوء والدفء.</p>
-                        <button class="gemini-btn" onclick="generateProductDescription('بخور وعود أصيل', 'product-desc-3')">✨ اقترح وصفًا للمنتج</button>
                         <div class="product-rating">
                            <div class="rating">
                                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
@@ -208,12 +211,12 @@
         <!-- نافذة عرض الصورة المكبرة -->
         <div id="imageModal" class="modal">
             <span class="close-btn" id="imageModalClose">&times;</span>
-            <img class="modal-content" id="modalImage">
+            <img class="modal-content-image" id="modalImage">
         </div>
 
         <!-- قسم التعليقات -->
         <section class="comments-section">
-            <div class="comments-header">
+            <div class="comments-header-container">
                 <h2>آراء عملاء الأيقونة للعطور</h2>
                 <button id="analyze-comments-btn" class="gemini-btn">✨ تحليل آراء العملاء</button>
             </div>
@@ -221,7 +224,7 @@
             <div id="comments-list">
                 <!-- التعليقات سيتم تحميلها هنا عبر JavaScript -->
             </div>
-            <button id="load-more-comments" class="btn-load-more">عرض كل التعليقات</button>
+            <button id="load-more-comments" class="btn-load-more">عرض المزيد من التعليقات</button>
 
             <div class="add-comment">
                 <h3>أضف تعليقك</h3>
@@ -238,9 +241,9 @@
                 <div class="follow-us">
                     <h3>تابعنا على</h3>
                     <div class="social-links">
-                        <a href="https://facebook.com/@alayqwnt.ll.twr" target="_blank" class="social-btn facebook"><i class="fab fa-facebook-f"></i> فيسبوك</a>
-                        <a href="https://www.instagram.com/lyqwn_lltwr" target="_blank" class="social-btn instagram"><i class="fab fa-instagram"></i> انستجرام</a>
-                        <a href="https://chat.whatsapp.com/your_group_invite" target="_blank" class="social-btn whatsapp"><i class="fab fa-whatsapp"></i> واتساب</a>
+                        <a href="https://facebook.com/@alayqwnt.ll.twr" target="_blank" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/lyqwn_lltwr" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://chat.whatsapp.com/your_group_invite" target="_blank" class="social-icon whatsapp"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 <div class="contact-us">
@@ -280,6 +283,7 @@
             <div class="chat-header">
                 <p>كيف يمكنني مساعدتك؟</p>
                 <span>لسماع الأغاني أرسل (تشغيل) أو (إيقاف)</span>
+                <button id="close-chat-btn">&times;</button>
             </div>
             <div id="chat-body">
                 <!-- رسائل الدردشة هنا -->
