--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,23 @@
         </div>
     </div>
 
+    <!-- داخل نافذة الدردشة -->
+<div class="chat-window" id="chatWindow">
+    <div class="chat-header">
+        <img src="icon.png" alt="خدمة العملاء">
+        <span>خدمة العملاء</span>
+        <button class="close-chat" id="closeChat">&times;</button>
+    </div>
+    <div class="chat-body" id="chatBody">
+        <div class="chat-message bot-message">
+            كيف يمكنني مساعدتك؟ أرسل سؤالاً وسنجيب عليك الآن. لسماع الأغاني أرسل كلمة (تشغيل) أو (إيقاف).
+        </div>
+    </div>
+    <div class="chat-footer" id="chatFooter">
+        <!-- سيتم تغيير هذا القسم ديناميكياً -->
+    </div>
+</div>
+
     <div class="container">
         <!-- الترويسة -->
         <header>
