--- a/index.html
+++ b/index.html
@@ -687,6 +687,22 @@
             <div class="header-content">
                 <h1>الأيقونة للعطور - جودة وأصالة</h1>
                 <p>تقدم لكم الأيقونة للعطور مجموعة مميزة من العطور الرجالية والنسائية وأجود أنواع البخور. نضمن لكم منتجات أصلية بجودة عالية مع خدمة توصيل سريعة لجميع المحافظات اليمنية.</p>
+
+                <!-- Install App Button -->
+                <section class="install-section">
+            <a href="الأيقونة.apk" class="install-btn" id="installBtn">
+                <i class="fas fa-download"></i> تثبيت التطبيق للاندرويد
+            </a>
+            <div class="progress-container" id="progressContainer">
+                <div class="progress-bar">
+                    <div class="progress-fill" id="progressFill"></div>
+                </div>
+                <div class="progress-info">
+                    <span id="progressPercentage">0%</span>
+                    <span id="progressCounter">0 KB / 0 KB</span>
+                </div>
+            </div>
+        </section>
                 
                 <!-- Install App Button -->
                 <button id="installApkBtn" class="order-btn" style="max-width: 300px;">
