--- a/offline.html
+++ b/offline.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الأيقونة للعطور - غير متصل</title>
+        <link rel="icon" href="icon.png" type="image/png">
+    <link rel="apple-touch-icon" href="icon-192x192.png">
+    <meta name="theme-color" content="#000000">
+    <title>الأيقونة للعطور - جودة وأصالة</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="offline" href="offline.html">
+    <link rel="index" href="index.html">
+    <link rel="men" href="men.html">
+    <link rel="female" href="female.html">
+    <link rel="moan" href="moan.html">
+    <link rel="script" href="script.js">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: 'Cairo', sans-serif;
