--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 <center>
     <div class="fixed-menu">
   <div class="btn-group btn-group-justified"> 
-   <a href="index.html" class="btn btn-warning">الرئيسية</a> 
+   <a href="index.html" class="contact-btn designer-btn">الرئيسية</a> 
    <a href="men.html" class="contact-btn messenger-btn">عطور رجالي</a> 
-   <a href="female.html" class="btn btn-primary">عطزر نسائية</a>
-   <a href="moan.html" class="btn btn-primary">بخور وعود</a>      
+   <a href="female.html" class="contact-btn messenger-btn">عطزر نسائية</a>
+   <a href="moan.html" class="contact-btn messenger-btn">بخور وعود</a>      
      </div> 
     </center>
     
