--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <div class="fixed-menu">
   <div class="btn-group btn-group-justified"> 
    <a href="index.html" class="contact-btn designer-btn">الرئيسية</a> 
-   <a href="men.html" class="contact-btn messenger-btn">عطور رجالي</a> 
-   <a href="female.html" class="contact-btn messenger-btn">عطزر نسائية</a>
-   <a href="moan.html" class="contact-btn messenger-btn">بخور وعود</a>      
+   <a href="men.html" class="contact-btn messenger-btn">رجالي</a> 
+   <a href="female.html" class="contact-btn messenger-btn">نسائية</a>
+<a href="moan.html" class="contact-btn messenger-btn">بخور</a>      
      </div> 
     </center>
     
