--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <center>
     <div class="fixed-menu">
   <div class="btn-group btn-group-justified"> 
-   <a href="index.html" class="contact-btn designer-btn">الرئيسية</a> 
+   <a href="index.html" class="contact-btn designer-btn">رئيسي</a> 
    <a href="men.html" class="contact-btn messenger-btn">رجالي</a> 
    <a href="female.html" class="contact-btn messenger-btn">نسائية</a>
 <a href="moan.html" class="contact-btn messenger-btn">بخور</a>      
