--- a/moan.html
+++ b/moan.html
@@ -415,6 +415,26 @@
             cursor: pointer;
         }
 
+    /* Fixed menu Buttons */
+        .fixed-menu { 
+            position: fixed;
+            margin-top: 5px;
+            align-items: center;
+            overflow: hidden;
+            z-index: 999; 
+        }
+        .fixed-menu-btn { 
+            padding: 10px 11px;
+            border-radius: 20px;
+            align-items: center; 
+            justify-content: center;
+            color: white; 
+            text-decoration: none; 
+        }   
+        .fixed-menu-btn:hover { transform: translateY(-5px) scale(1.1); }
+        .open { background: #3b5998; }
+        .closed { background: #1da1f2; }
+
         /* Chat Window */
         .chat-icon {
             position: fixed;
@@ -867,14 +887,14 @@
 
 
 <center>
-    <div class="fixed-menu">
+    <section class="fixed-menu">
   <div class="btn-group btn-group-justified"> 
-   <a href="index.html" class="submit-btn messenger-btn">🏠</a> 
-   <a href="men.html" class="submit-btn messenger-btn">عطر رجالي</a> 
-   <a href="female.html" class="submit-btn messenger-btn">عطر نسائي</a>
-<a href="moan.html" class="submit-btn submit-btn">بخور</a>      
+   <a href="index.html" class="fixed-menu-btn open">الرئيسية</a> 
+   <a href="men.html" class="fixed-menu-btn open">عطور رجالية</a> 
+   <a href="female.html" class="fixed-menu-btn open">عطور نسائية</a>
+<a href="moan.html" class="fixed-menu-btn closed">بخور وعود</a>      
      </div> 
-    </center>
+    </section>
     
     <div class="container">
         <header>
@@ -896,7 +916,7 @@
             </div>
 
         <section class="install-section">
-            <a href="الأيقونة.apk" class="order-btn" id="installBtn">
+            <a href="#" class="order-btn" id="installBtn">
                 <i class="fas fa-download"></i> تثبيت عادي لتطبيق (الأيقونة)
             </a>
             <div class="progress-container" id="progressContainer">
@@ -934,7 +954,7 @@
                              <div class="rating" id="rating-bakhoor">
                                 <i class="far fa-star" data-value="1"></i><i class="far fa-star" data-value="2"></i><i class="far fa-star" data-value="3"></i><i class="far fa-star" data-value="4"></i><i class="far fa-star" data-value="5"></i>
                             </div>
-                            <span class="rating-count" id="rating-count-bakhoor">(0 تقييم)</span>
+                            <span class="rating-count" id="rating-count-bakhoor">(35 تقييم)</span>
                         </div>
                         <div class="product-actions">
                            <div class="fb-like" data-href="https://talalye1.github.io/Icon-perfumes/moan.html#product3" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
@@ -1074,7 +1094,7 @@
           progressContainer.style.display = 'block';
 
           try {
-            const response = await fetch('./app.apk');
+            const response = await fetch('./الأيقونة.apk');
             if (!response.ok) {
                 throw new Error(`خطأ في الشبكة: ${response.statusText}`);
             }
@@ -1103,7 +1123,7 @@
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = 'icon-perfumes.apk';
+            a.download = 'الأيقونة.apk';
             document.body.appendChild(a);
             a.click();
             a.remove();
@@ -1378,7 +1398,7 @@
                   headers: { 'Content-Type': 'application/json' },
                   body: JSON.stringify({
                       "contents": [{
-                          "parts": [{ "text": `أنت مساعد ذكي في متجر عطور اسمه "الأيقونة". أجب على السؤال التالي باللغة العربية بأسلوب ودود ومختصر: ${message}` }]
+                          "parts": [{ "text": `أنت خدمة العملاء في متجر عطور اسمه "الأيقونة". عنوان: المركز الرئيسي للأيقونة "اليمن محافظة ذمار". عملية شراء منتج يتم الدفع عبر إيداع مبلغ الشراء لحساب الايقونة لدى بنك الكريمي. رقم حساب الكريمي الخاص باستقبال المبالغ قم بمراسلتنا عبر زر الماسنجر الموجود في اسفل صفحة المتجر او الضغط على زر اطلب الان الموجود تحت كل منتج ليتم تزويدك برقم حساب بنك الكريمي. مصمم ومبرمح متحر الأيقونة "السيد طلال سليمان المقطري". رقم هاتف المصمم طلال سليمان المقطري "774662666". أجب على السؤال التالي باللغة العربية بأسلوب ودود ومختصر: ${message}` }]
                       }]
                   })
               });
@@ -1430,9 +1450,9 @@
       const shareTextTemplate = (productName) => `الأيقونة للعطور - جودة وأصالة
 ${productName}
 عطور رجاليه ونسائيه واجود انواع البخور
-يوجد لدينا التوصيل الى جميع المحافظات اليمنيه
+نقوم بتوصيل الطلبات الى جميع المحافظات اليمنيه.
 ↓روابط الأيقونة للعطور↓
-موقع متجر الايقونة↓
+موقع متجر الايقونة قسم البخور والعود↓
 https://talalye1.github.io/Icon-perfumes/moan.html
 تطبيق متجر الايقونة ↓
 https://talalye1.github.io/Icon-perfumes/الأيقونة.apk
@@ -1485,7 +1505,7 @@ https://m.me/alayqwnt.ll.twr`;
       };
 
       window.sharePage = (platform) => {
-          const text = shareTextTemplate("تصفحوا مجموعتنا المميزة!");
+          const text = shareTextTemplate("!تصفحوا مجموعتنا المميزة في قسم البخور والعود! يوجد لدينا");
           shareContent(text, platform);
       };
       
