--- a/offline.html
+++ b/offline.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="moan4.jpg" alt="شعار المتجر" width="100%">
+        <img src="moant4.jpg" alt="شعار المتجر" width="100%">
         <h1>أنت غير متصل بالإنترنت</h1>
         <p>يرجى التحقق من اتصالك بالشبكة والمحاولة مرة أخرى.</p>
         <p>بعض محتوى متجر الأيقونة للعطور قد يكون متاحاً من الذاكرة المؤقتة.</p>
