--- a/men.html
+++ b/men.html
@@ -340,10 +340,9 @@
     <div class="top-bar">
         <div class="nav-buttons">
             <a href="index.html" class="nav-btn">الرئيسية</a>
-            <a href="men.html" class="nav-btn active">رجالي</a>
-            <a href="female.html" class="nav-btn">نسائي</a>
-            <a href="moan.html" class="nav-btn">بخور</a>
-            <a href="makeup.html" class="nav-btn">تجميل</a>
+            <a href="female.html" class="nav-btn">عطور نسائي</a>
+            <a href="moan.html" class="nav-btn">بخـور وعود</a>
+            <a href="makeup.html" class="nav-btn">مستحضرات</a>
         </div>
     </div>
                     <!-- أيقونات Font Awesome -->
@@ -380,9 +379,6 @@
                 <div id="downloadStatus" style="margin-top: 5px; color: var(--light-gold);"></div>
             </div>
         </div>
-
-        <hr style="border-color: var(--gold); opacity: 0.2; margin: 40px 0;">
-
         <div class="container">
             <h2>لماذا تختار الأيقونة للعطور؟</h2>
             <div class="why-us">
@@ -403,9 +399,6 @@
                 </div>
             </div>
         </div>
-
-        <hr style="border-color: var(--gold); opacity: 0.2; margin: 40px 0;">
-
         <div class="container">
             <h2>منتجاتنا الرجالية المميزة</h2>
             <div id="products-grid" class="products-grid">
@@ -423,9 +416,6 @@
                 <button class="modal-btn close">إلغاء</button>
             </div>
         </div>
-
-        <hr style="border-color: var(--gold); opacity: 0.2; margin: 40px 0;">
-
         <div class="container">
             <div id="comments-section">
                 <h2>آراء العملاء</h2>
@@ -556,7 +546,8 @@
             { id: 'p1', name: 'عطر العود الملكي', price: 5900, image: 'men1.jpg', rating: 4.8 },
             { id: 'p2', name: 'نسيم البحر', price: 4900, image: 'men2.jpg', rating: 4.5 },
             { id: 'p3', name: 'روح الصحراء', price: 5500, image: 'men3.jpg', rating: 4.9 },
-            { id: 'p4', name: 'ليالي الشرق', price: 5200, image: 'men4.jpg', rating: 4.7 }
+            { id: 'p4', name: 'ليالي الشرق', price: 5200, image: 'men4.jpg', rating: 4.7 },
+            { id: 'p5', name: 'خرير الماء', price: 4200, image: 'men5.jpg', rating: 4.6 }
         ];
 
         const productsGrid = document.getElementById('products-grid');
@@ -762,6 +753,16 @@
                 window.speechSynthesis.speak(utterance);
             }
         }
+        
+        async function handleMessageSend() {
+          const input = document.getElementById('chatInput');
+          const message = input.value.trim();
+          if (message) {
+              addMessageToChat(message, 'user');
+              input.value = '';
+              await processMessage(message);
+          }
+      }
 
         // Add message to chat UI
         function addMessage(text, sender) {
@@ -771,7 +772,6 @@
             chatMessages.appendChild(messageDiv);
             chatMessages.scrollTop = chatMessages.scrollHeight;
         }
-
         // Open/Close chat
         chatIcon.onclick = () => { chatPopup.style.display = 'flex'; chatIcon.style.display = 'none'; };
         closeChatBtn.onclick = () => { chatPopup.style.display = 'none'; chatIcon.style.display = 'block'; };
@@ -780,11 +780,11 @@
         if (userName) {
             namePrompt.style.display = 'none';
             chatInputArea.style.display = 'flex';
-            const welcomeBackMsg = `أهلاً بعودتك يا ${userName}! كيف أقدر أساعدك اليوم؟ يمكنك طلب تشغيل الموسيقى بقول "شغل موسيقى".`;
+            const welcomeBackMsg = `أهلاً بعودتك يا ${userName}! كيف أقدر أساعدك اليوم؟ يمكنك سماع الموسيقى اكتب "شغل موسيقى".`;
             addMessage(welcomeBackMsg, 'bot');
             speak(welcomeBackMsg);
         } else {
-            const welcomeMsg = "أهلاً بك في متجر الأيقونة! أنا مساعدك الذكي. لطفاً، أدخل اسمك للبدء.";
+            const welcomeMsg = "أهلاً بك في متجر الأيقونة! أنا خدمة العملاء. لطفاً، أدخل اسمك للبدء.";
             addMessage(welcomeMsg, 'bot');
             speak(welcomeMsg);
         }
@@ -796,7 +796,7 @@
                 localStorage.setItem('perfume_userName', userName);
                 namePrompt.style.display = 'none';
                 chatInputArea.style.display = 'flex';
-                addMessage(`رائع يا ${userName}! كيف أقدر أساعدك؟ لسماع الموسيقى ارسل كلمة "شغل الموسيقى`, 'bot');
+                addMessage(`رائع يا ${userName}! كيف أقدر أساعدك؟ لسماع الموسيقى ارسل كلمة "تشغيل`, 'bot');
             }
         };
 
@@ -825,7 +825,9 @@
             'سعر': 'الأسعار موضحة في صفحة كل منتج. لأي استفسار آخر، أنا في الخدمة.',
             'استبدال': 'نقدم خدمة استبدال المنتج خلال 7 أيام من الاستلام في حال وجود عيب مصنعي.',
             'عنوان': 'مقرنا الرئيسي في محافظة ذمار، اليمن، ونقوم بالتوصيل لجميع المحافظات.',
-            'مصمم': 'تم تصميم المتجر بواسطة المبرمج والمصمم طلال سليمان المقطري. للتواصل معه: 774662666.'
+            'مصمم': 'تم تصميم المتجر بواسطة المبرمج والمصمم طلال سليمان المقطري. للتواصل معه: 774662666.',
+            'من معي': 'انا موظف خدمة العملاء لدى متجر الأيقونة للعطور..',
+            'من انت': 'انا موظف خدمة العملاء لدى متجر الأيقونة للعطور.'
         };
 
         // Process user query
@@ -840,7 +842,7 @@
             if (stopCommands.some(cmd => query.includes(cmd))) {
                 audioPlayer.pause();
                 audioPlayer.src = '';
-                addMessage('تم إيقاف الموسيقى.', 'bot');
+                addMessage('تم إيقاف الموسيقى لتشغيل ارسل كلمة "تشغيل".', 'bot');
                 return;
             }
 
@@ -854,14 +856,14 @@
             }
 
             // Fallback to Gemini API
-            addMessage('لحظات، أفكر في إجابة... 🤔', 'bot');
+            addMessage('لحظات، الأيقونة يكتب الإجابة... 🤔 الأن', 'bot');
             try {
                 const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${GEMINI_API_KEY}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         "contents": [{
-                            "parts": [{ "text": `أنت مساعد ذكي وودود في متجر عطور اسمه "الأيقونة". أجب على هذا السؤال من العميل "${userName}": ${query}` }]
+                            "parts": [{ "text": `أنت خدمة العملاء في متجر عطور اسمه "الأيقونة". عنوان: المركز الرئيسي للأيقونة "اليمن محافظة ذمار". عملية شراء منتج يتم الدفع عبر إيداع مبلغ الشراء لحساب الايقونة لدى بنك الكريمي. رقم حساب الكريمي الخاص باستقبال المبالغ قم بمراسلتنا عبر زر الماسنجر الموجود في اسفل صفحة المتجر او الضغط على زر اطلب الان الموجود تحت كل منتج ليتم تزويدك برقم حساب بنك الكريمي. مصمم ومبرمح متحر الأيقونة "السيد طلال سليمان المقطري". رقم هاتف المصمم طلال سليمان المقطري "774662666". أجب على السؤال التالي باللغة العربية بأسلوب ودود ومختصر: ${message}` }]
                         }]
                     })
                 });
@@ -876,7 +878,7 @@
             } catch (error) {
                 console.error("Gemini API Error:", error);
                 chatMessages.removeChild(chatMessages.lastChild); 
-                addMessage('عفواً، حدث خطأ ما. حاول مرة أخرى.', 'bot');
+                addMessage('عذراً، حدث خطأ أثناء محاولة الرد. مؤظف خدمة العملاء غير متواجد في الوقت الحالي. يرجى المحاولة مرة أخرى..', 'bot');
             }
         }
         
