--- a/female.html
+++ b/female.html
@@ -789,7 +789,7 @@
         if (userName) {
             namePrompt.style.display = 'none';
             chatInputArea.style.display = 'flex';
-            const welcomeBackMsg = `أهلاً بعودتك يا ${userName}! كيف أقدر أساعدك اليوم؟ يمكنك سماع الموسيقى اكتب "شغل موسيقى".`;
+            const welcomeBackMsg = `أهلاً بعودتك يا ${userName}! لقسم العطور النسائية كيف أقدر أساعدك اليوم؟ يمكنك سماع الموسيقى في ايقونة الدردشة اكتب "تشغيل".`;
             addMessage(welcomeBackMsg, 'bot');
             speak(welcomeBackMsg);
         } else {
