--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
         if (userName) {
             namePrompt.style.display = 'none';
             chatInputArea.style.display = 'flex';
-            const welcomeBackMsg = `أهلاً بعودتك يا ${userName}! كيف أقدر أساعدك اليوم؟ يمكنك سماع الموسيقى اكتب "شغل موسيقى".`;
+            const welcomeBackMsg = `أهلاً بعودتك يا ${userName}! لمتجر الأيقونة كيف أقدر أساعدك اليوم؟ يمكنك سماع الموسيقى في ايقونة الدردشة اكتب "تشغيل".`;
             addMessage(welcomeBackMsg, 'bot');
             speak(welcomeBackMsg);
         } else {
