--- a/female.html
+++ b/female.html
@@ -369,9 +369,13 @@
   </div>
 </div>
     <div class="container">
+    <p>عدد الزوار: <span id="visitorCount" style="color: gold;"></span></p>
+    </div>
+    <div class="container">
                 <h1>عطور نسائية فاخرة</h1>
                 <p>اكتشف مجموعة العطور النسائية التي تعكس الذوق والأناقة. ثبات يدوم طويلاً ورائحة تأسر الحواس.</p>
-                
+                </div>
+    <div class="container">
                 <button id="downloadBtn">
                     <i class="fab fa-android"></i> تحميل تطبيق الأندرويد
                 </button>
@@ -380,8 +384,7 @@
             </div>
         </div>
 
-        <hr style="border-color: var(--gold); opacity: 0.2; margin: 40px 0;">
-
+        
         <div class="container">
             <h2>لماذا تختار الأيقونة للعطور؟</h2>
             <div class="why-us">
@@ -403,8 +406,6 @@
             </div>
         </div>
 
-        <hr style="border-color: var(--gold); opacity: 0.2; margin: 40px 0;">
-
         <div class="container">
             <h2>منتجاتنا النسائية المميزة</h2>
             <div id="products-grid" class="products-grid">
@@ -423,7 +424,6 @@
             </div>
         </div>
 
-        <hr style="border-color: var(--gold); opacity: 0.2; margin: 40px 0;">
 
         <div class="container">
             <div id="comments-section">
@@ -964,6 +964,29 @@ const sliderImgs = ["female1.jpg","female2.jpg","female3.jpg","female4.jpg","fem
       spacing:"3px"
     });
   });
+
+// Check for localStorage support
+    if (typeof(Storage) !== "undefined") {
+        // Get the current visitor count from localStorage
+        let count = localStorage.getItem("visitorCount");
+
+        // If it's the first visit, set the count to 1
+        if (count === null) {
+            count = 1;
+        } else {
+            // Otherwise, increment the count by 1
+            count = parseInt(count) + 1;
+        }
+
+        // Store the new count in localStorage
+        localStorage.setItem("visitorCount", count);
+
+        // Display the count on the page
+        document.getElementById("visitorCount").innerHTML = count;
+    } else {
+        // Fallback for browsers that don't support localStorage
+        document.getElementById("visitorCount").innerHTML = "متصفحك لا يدعم localStorage";
+    }
     </script>
 
 </body>
