--- a/men.html
+++ b/men.html
@@ -369,6 +369,9 @@
   </div>
 </div>
     <div class="container">
+    <p>عدد الزوار: <span id="visitorCount" style="color: gold;"></span></p>
+    </div>
+    <div class="container">
                 <h1>عطور رجالية فاخرة</h1>
                 <p>اكتشف مجموعة العطور الرجالية التي تعكس القوة والأناقة. ثبات يدوم طويلاً ورائحة تأسر الحواس.</p>
                 
@@ -955,6 +958,29 @@ const sliderImgs = ["men1.jpg","men2.jpg","men3.jpg","men4.jpg","men5.jpg"];
       spacing:"3px"
     });
   });
+
+// Check for localStorage support
+    if (typeof(Storage) !== "undefined") {
+        // Get the current visitor count from localStorage
+        let count = localStorage.getItem("visitorCount");
+
+        // If it's the first visit, set the count to 1
+        if (count === null) {
+            count = 1;
+        } else {
+            // Otherwise, increment the count by 1
+            count = parseInt(count) + 1;
+        }
+
+        // Store the new count in localStorage
+        localStorage.setItem("visitorCount", count);
+
+        // Display the count on the page
+        document.getElementById("visitorCount").innerHTML = count;
+    } else {
+        // Fallback for browsers that don't support localStorage
+        document.getElementById("visitorCount").innerHTML = "متصفحك لا يدعم localStorage";
+    }
     </script>
 
 </body>
