--- a/index.html
+++ b/index.html
@@ -346,13 +346,11 @@
             <a href="makeup.html" class="nav-btn">مستحضرات</a>
         </div>
     </div>
-                    <!-- أيقونات Font Awesome -->
+    
     <main>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<!-- خط عربي أنيق -->
-<link href="https://fonts.googleapis.com/css?family=Cairo&display=swap" rel="stylesheet">
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Hello, World!</title>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
 <!-- (4/8) مربع الصور المتحركة وصور المنتجات المصغرة -->
 <div class="products-section" style="padding:0px 0;">
   <div id="mainSlider" style="width:100%;max-width:100%;margin:0 auto 5px;position:relative;border:4px solid var(--gold);border-radius:10px;overflow:hidden;background:var(--black);display:flex;justify-content:center;align-items:center;min-height:100%;">
@@ -360,13 +358,9 @@
     <img id="mainImg" src="moant4.jpg" alt="منتج مختار" style="width:100%;max-width:100%;height:100%;object-fit:contain;transition:.4s;">
     </div>
   <!-- صف الصور المصغرة -->
-  </div>
-</div>
-    <div class="container">
     <p>عدد الزوار: <span id="visitorCount" style="color: gold;"></span></p>
     </div>
-    <div class="container">
-                <h1>الأيقونة للعطور - اناقة واصالة</h1>
+                <h1>الأيقونة للعطور  اناقة واصالة</h1>
                 <p>اكتشف مجموعة من العطور الرجالية والنسائية والبخور تمتع بالقوة والأناقة. ثبات يدوم طويلاً ورائحة تأسر الحواس.</p>
     </div>
     <div class="container">
@@ -853,15 +847,19 @@
                 }
             }
 
-            // Fallback to Gemini API
-            addMessage('لحظات، الأيقونة يكتب الإجابة... 🤔 الأن', 'bot');
+            // =================================================================================
+            // START: الجزء الخاص بالرد على الأسئلة العامة (هذا هو الجزء الذي طلبته)
+            // =================================================================================
+            // إذا لم يتم العثور على إجابة جاهزة في الخطوات السابقة، سيتم تنفيذ هذا الكود.
+            // هذا الكود يتصل بـ Gemini للإجابة على أي سؤال عام آخر.
+            addMessage('....لحظات، خدمة العملاء يقوم بكتابة الإجابة... 🤔', 'bot');
             try {
                 const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${GEMINI_API_KEY}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         "contents": [{
-                            "parts": [{ "text": `أنت خدمة العملاء في متجر عطور اسمه "الأيقونة". عنوان: المركز الرئيسي للأيقونة "اليمن محافظة ذمار". عملية شراء منتج يتم الدفع عبر إيداع مبلغ الشراء لحساب الايقونة لدى بنك الكريمي. رقم حساب الكريمي الخاص باستقبال المبالغ قم بمراسلتنا عبر زر الماسنجر الموجود في اسفل صفحة المتجر او الضغط على زر اطلب الان الموجود تحت كل منتج ليتم تزويدك برقم حساب بنك الكريمي. مصمم ومبرمح متحر الأيقونة "السيد طلال سليمان المقطري". رقم هاتف المصمم طلال سليمان المقطري "774662666". أجب على السؤال التالي باللغة العربية بأسلوب ودود ومختصر: ${message}` }]
+                            "parts": [{ "text": `أنت مساعد ذكي وودود في متجر عطور اسمه "الأيقونة". أجب على هذا السؤال من العميل "${userName}": ${query}` }]
                         }]
                     })
                 });
@@ -876,8 +874,11 @@
             } catch (error) {
                 console.error("Gemini API Error:", error);
                 chatMessages.removeChild(chatMessages.lastChild); 
-                addMessage('عذراً، حدث خطأ أثناء محاولة الرد. مؤظف خدمة العملاء غير متواجد في الوقت الحالي. يرجى المحاولة مرة أخرى..', 'bot');
+                addMessage('عفواً، حدث خطأ ما. حاول مرة أخرى.', 'bot');
             }
+            // =================================================================================
+            // END: نهاية الجزء الخاص بالرد على الأسئلة العامة
+            // =================================================================================
         }
         
         // Speech Recognition
