--- a/makeup.html
+++ b/makeup.html
@@ -109,23 +109,19 @@
             <a href="moan.html" class="nav-btn">بخور وعود</a>
         </div>
     </div>
-                    <!-- أيقونات Font Awesome -->
+    
     <main>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<!-- خط عربي أنيق -->
-<link href="https://fonts.googleapis.com/css?family=Cairo&display=swap" rel="stylesheet">
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Hello, World!</title>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
 <!-- (4/8) مربع الصور المتحركة وصور المنتجات المصغرة -->
 <div class="products-section" style="padding:0px 0;">
   <div id="mainSlider" style="width:100%;max-width:100%;margin:0 auto 5px;position:relative;border:4px solid var(--gold);border-radius:10px;overflow:hidden;background:var(--black);display:flex;justify-content:center;align-items:center;min-height:100%;">
    <!-- الصورة الكبرى المتغيرة -->
     <img id="mainImg" src="moant4.jpg" alt="منتج مختار" style="width:100%;max-width:100%;height:100%;object-fit:contain;transition:.4s;">
     </div>
-  <div class="container">
     <p>عدد الزوار: <span id="visitorCount" style="color: gold;"></span></p>
     </div>
-    <div class="container">
         <h1>مستحضرات التجميل - قيد الإنشاء</h1>
         <p>قريباً سيتم انشاء قسم مستحضرات التجميل</p>
         </div>
