--- a/makeup.html
+++ b/makeup.html
@@ -1074,21 +1074,21 @@
         };
 
         const products = [
-            { id: 'p1', name: 'عطر رجالي العود الملكي', price: 5900, image: 'men1.jpg', rating: 4.8 },
-            { id: 'p2', name: 'عطر نسائي نسيم البحر', price: 4900, image: 'female2.jpg', rating: 4.5 },
-            { id: 'p3', name: 'عطر رجالي روح الصحراء', price: 5500, image: 'men3.jpg', rating: 4.9 },
-            { id: 'p4', name: 'عطر نسائي ليالي الشرق', price: 5200, image: 'female4.jpg', rating: 4.7 },
-            { id: 'p5', name: 'عطر رجالي خرير الماء', price: 4200, image: 'men5.jpg', rating: 4.6 },
-            { id: 'p6', name: 'عطر نسائي العود الملكي', price: 5900, image: 'female1.jpg', rating: 4.8 },
-            { id: 'p7', name: 'عطر رجالي نسيم البحر', price: 4900, image: 'men2.jpg', rating: 4.5 },
-            { id: 'p8', name: 'عطر نسائي روح الصحراء', price: 5500, image: 'female3.jpg', rating: 4.9 },
-            { id: 'p9', name: 'عطر رجااي ليالي الشرق', price: 5200, image: 'men4.jpg', rating: 4.7 },
-            { id: 'p10', name: 'عطر نسائي خرير الماء', price: 4200, image: 'female5.jpg', rating: 4.6 },
-            { id: 'p1', name: 'بخور العود الملكي', price: 5900, image: 'moan1.jpg', rating: 4.8 },
-            { id: 'p2', name: 'بخور نسيم البحر', price: 4900, image: 'moan2.jpg', rating: 4.5 },
-            { id: 'p3', name: 'بخور روح الصحراء', price: 5500, image: 'moan3.jpg', rating: 4.9 },
-            { id: 'p4', name: 'بخور ليالي الشرق', price: 5200, image: 'moan4.jpg', rating: 4.7 },
-            { id: 'p5', name: 'بخور خرير الماء', price: 4200, image: 'moan5.jpg', rating: 4.6 }
+            { id: 'p1', name: 'عطر العود الملكي رجالي', price: 5900, image: 'men1.jpg', rating: 4.1 },
+            { id: 'p2', name: 'عطر نسيم البحر نسائي', price: 4900, image: 'female2.jpg', rating: 4.2 },
+            { id: 'p3', name: 'عطر روح الصحراء رجالي', price: 5500, image: 'men3.jpg', rating: 4.3 },
+            { id: 'p4', name: 'عطر ليالي الشرق نسائي', price: 5200, image: 'female4.jpg', rating: 4.4 },
+            { id: 'p5', name: 'عطر خرير الماء رجالي', price: 4200, image: 'men5.jpg', rating: 4.5 },
+            { id: 'p6', name: 'عطر العود الملكي نسائي', price: 5900, image: 'female1.jpg', rating: 4.6 },
+            { id: 'p7', name: 'عطر نسيم البحر رجالي', price: 4900, image: 'men2.jpg', rating: 4.7 },
+            { id: 'p8', name: 'عطر روح الصحراء نسائي', price: 5500, image: 'female3.jpg', rating: 4.8 },
+            { id: 'p9', name: 'عطر ليالي الشرق رجالي', price: 5200, image: 'men4.jpg', rating: 4.9 },
+            { id: 'p10', name: 'عطر خرير الماء نسائي', price: 4200, image: 'female5.jpg', rating: 5.1 },
+            { id: 'p11', name: 'بخور العود الملكي', price: 5900, image: 'moan1.jpg', rating: 5.2 },
+            { id: 'p12', name: 'بخور نسيم البحر', price: 4900, image: 'moan2.jpg', rating: 5.3 },
+            { id: 'p13', name: 'بخور روح الصحراء', price: 5500, image: 'moan3.jpg', rating: 5.4 },
+            { id: 'p14', name: 'بخور ليالي الشرق', price: 5200, image: 'moan4.jpg', rating: 5.5 },
+            { id: 'p15', name: 'بخور خرير الماء', price: 4200, image: 'moan5.jpg', rating: 5.6 }
         ];
 
         let likesData = JSON.parse(localStorage.getItem('productLikes')) || {};
