--- a/makeup.html
+++ b/makeup.html
@@ -244,7 +244,7 @@
             padding: 15px;
             text-align: center;
             transition: all 0.3s ease;
-            display: flex;
+            display: none;
             flex-direction: column;
             justify-content: space-between;
         }
